src/test/deca/context/invalid/expr_cast_int_to_Object.deca
// Test of the rule (3.39) : can't cast int to Object.

{
	Object var1;
	int var2;
	var1 = (Object)(var2);
}

// Résultat :
//# a
